--- a/i3/config
+++ b/i3/config
@@ -42,24 +42,14 @@ set $monitor2 DP1-8
 set $monitor3 DP2
 
 
-### Shortcut for going to laptop only
-bindsym $mod+shift+plus exec --no-startup-id xrandr --output $monitor2 --off && xrandr --output $monitor3 --off
-
-
-### Shortcut for connecting work displays
-### (You shouldn't really need to ever do this, except in testing)
-# bindsym $mod+shift+minus exec --no-startup-id ./home/alairock/Documents/xrandr.sh
-# Just use cmd+shift+reload
-
-# xrandr --output $monitor2 --auto
-# xrandr --output $monitor3 --auto
-
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
 set $up e
 set $down i
 set $left n
 set $right o
+
+# bindcode Caps_Lock+a workspace $ws1
 
 # Floating Modifier
 floating_modifier $mod
@@ -154,7 +144,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+p restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+f exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+f exec "/home/alairock/.config/i3/scripts/i3-exit"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -185,26 +175,16 @@ bindsym $mod+p mode "resize"
 
 
 bar {
-  # status_command 		i3blocks -c ~/.config/i3/i3blocks.conf
   strip_workspace_numbers yes
   position 		top
-  #	mode 			dock
-  #	workspace_buttons 	yes
-
-  # height 18
-  # font pango: Terminess Powerline, awesome 12
-  # font pango:Liberation Mono 12
-  # font pango:monospace 12
   font pango:Ubuntu Sans Mono 12
   position top
   status_command i3blocks
   colors {
     background #1d1d1d
     separator #757575
-    #                  border background text
     focused_workspace  #121212 #101010 #9e8a8e
     inactive_workspace #101010 #191919 #999999
-    # unfocusud_workspace #101010 #191919 #999999
     urgent_workspace   #cd989a #cd989a #2e3436
   }
 }
@@ -213,20 +193,13 @@ bar {
 bindsym $mod+l exec i3lock --color 475263
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +3% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -3% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-mute 1 0 ; pactl set-sink-volume 1 +5% ; aplay /home/alairock/Documents/blip.wav -q;"
+bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-mute 1 0 ; pactl set-sink-volume 1 -5% ; aplay /home/alairock/Documents/blip.wav -q;"
+bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute 1 toggle ; aplay /home/alairock/Documents/blip.wav -q;"
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
-
-# Touchpad controls
-#bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-
-#Gestures?
-# gesture: swipe up 3 xdotool key super+f
-
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
@@ -235,14 +208,16 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # startup
-exec --no-startup-id volumeicon
 exec --no-startup-id spotify
 exec slack
 exec google-chrome
 exec atom
 exec idea
+exec_always xrandr --output eDP1 --scale 0.8x0.8
+exec --no-startup-id nm-applet
 exec_always feh --bg-scale /home/alairock/background.jpg
 exec_always /home/alairock/Documents/xrandr.sh
+exec_always --no-startup-id synclient NaturalScrolling=0 VertScrollDelta=-113
 
 # workspace default monitors
 workspace $ws1 output $monitor2
