--- a/i3blocks/config
+++ b/i3blocks/config
@@ -28,14 +28,14 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
-
-#[focused window]
-#<!-- command=xtitle -s -r -->
-#interval=persist
-#color=#ffffff
-#border=#151617
-#border_right=3
-
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+[mediaplayer]
+instance=spotify
+interval=1
+signal=10
 
 # Volume indicator
 #
@@ -44,17 +44,10 @@ markup=none
 # See the script for details.
 [volume2]
 label=♪
+color=#00BAED
 command=sleep .2; amixer get Master | grep -E -o '[0-9]{1,3}?%' | head -1
 interval=repeat
 signal=1
-
-[volume]
-label=VOL
-#label=♪
-# instance=Master
-instance=PCM
-interval=once
-signal=10
 
 # Memory usage
 #
@@ -90,28 +83,6 @@ color=#0AAFA0
 interval=10
 separator=true
 
-#[wifi]
-#instance=wlp3s0
-#interval=10
-#separator=true
-
-#[bandwidth]
-#instance=eth0
-#interval=5
-
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[cpu_usage]
-#label=CPU
-#interval=10
-#min_width=CPU: 100.00%
-#separator=true
-
-#[load_average]
-#interval=10
-
 [batterybar]
 command=/home/alairock/.config/i3/scripts/batterybar #run batterybar -h for options
 label=bat:
@@ -123,43 +94,3 @@ min_width=bat: ■■■■■
 [time]
 command=date +'%d %a %I:%M %p'
 interval=5
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-instance=spotify
-interval=2
-signal=10
-
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
-
-# Key indicators
-#
-# Add the following bindings to i3 config file:
-#
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
-
-#[keyindicator]
-#instance=NUM
-#interval=once
-#signal=11
